# hetzner-dns-manager

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  RELEASE.md  SPECS.md  build_hook.py  devenv.nix  dns-manager  dns_api.txt  flake.nix  hdem  hdem.py  pyproject.toml
.github/workflows/: lint.yml  test.yml
docs/: SPECS.md
tests/: __init__.py  conftest.py  test_dns_checking.py
tests/unit/: __init__.py  test_helpers.py  test_record.py  test_zone.py
